--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
           <li>
             <%= form_tag search_index_path, :method => 'get', :class => "navbar-form navbar-left", :rolze => "search" do %>
             <div class="form-group">
-              <%= text_field_tag :search, params[:search], placeholder: 'Search', :class => "form-control" %>
+              <%= text_field_tag :search, params[:search], :class => "form-control" %>
             </div>
             <%= submit_tag "Search", name: nil, class: 'btn btn-default' %>
             <% end %> 
