change tiny things

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <nav id="menu" class="navbar navbar-default navbar-fixed-top">
     <div class="container">
       <div class="col-md-2">
-        <a class="navbar-brand logo-header" href="#page-top">
+        <a class="navbar-brand logo-header" href="#">
           <img src="/assets/logo.jpg" alt="logo">
         </a>
       </div>
