change some tiny things

--- a/app/views/game/detail.html.erb
+++ b/app/views/game/detail.html.erb
@@ -89,8 +89,8 @@
               <div class="header_shousai_game">
                 <% if @game.reviews.average(:rating) != nil %>
                   <p><%= @game.reviews.average(:rating).round(1) %> Point</p>
-                <% else %>
-                  <p>No rating</p>
+                <%# else %>
+<!--                  <p>No rating</p>-->
                 <% end %>
               </div>
               <div class="header_shousai_game">
