--- a/app/views/search/advance_search.html.erb
+++ b/app/views/search/advance_search.html.erb
@@ -60,7 +60,7 @@
                       <b>User score:
                         <%= game.reviews.average(:rating) %></b>
                     <% else %>
-                      <b>User score: No rating %> </b>
+                      <b>User score: No rating </b>
                     <% end %>
                   </div>
                   <div class="col-xs-7 col-md-4">
