--- a/app/assets/stylesheets/game.scss
+++ b/app/assets/stylesheets/game.scss
@@ -33,3 +33,11 @@
 .user-review {
     margin-left:12px !important;    
 }
+
+.navbar-fixed-top {
+    height:77px;
+}
+
+.space-nav {
+    margin-top:95px;   
+}
