--- a/app/assets/stylesheets/gameshousai.scss
+++ b/app/assets/stylesheets/gameshousai.scss
@@ -38,6 +38,7 @@ p {
 
 .logo-header img {
   width: 114px;
+  height: 100px;
 }
 
 .dropdown-background-color {
@@ -527,6 +528,7 @@ label {
   font-weight: 900;
   color: red;
   text-shadow: 0px 1px 3px #a98e8e;
+  padding:0px !important;
 }
 
 .star-user {
