--- a/app/assets/stylesheets/game.scss
+++ b/app/assets/stylesheets/game.scss
@@ -33,3 +33,15 @@
 .user-review {
     margin-left:12px !important;    
 }
+
+.navbar-fixed-top {
+    height:77px;
+}
+
+.space-nav {
+    margin-top:95px;   
+}
+
+.create_review_modal {
+    width: 915px !important;
+}
