--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -14,7 +14,7 @@
         </div>
         <%= hidden_field_tag :game_id, params[:game_id] %>
         <div class="wrap-input100 validate-input" data-validate = "Enter username">
-          <%= f.text_area :content, placeholder:"Content", class:"input100"%>
+          <%= f.cktext_area :content, placeholder:"Content", class:"input100"%>
           <span class="focus-input100" data-placeholder=""></span>
         </div>
      
