--- a/app/views/game/detail.html.erb
+++ b/app/views/game/detail.html.erb
@@ -68,6 +68,7 @@
   </a>
 </div> -->
 <div id="about">
+
   <div class="container">
     <div class="row">
       <div class="col-md-9">
@@ -119,6 +120,7 @@
                       <% end %>
                     </p>
                   </div>
+
                 </div>
                 <p>
                   <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
@@ -132,16 +134,23 @@
         <div class="col-md-12">
           <div class="col-md-4 star-review">
             <section class="micropost_form">
-              <% if user_signed_in? %>
-                <% if @game.reviews.where(user_id: current_user.id).count != 0 %>
-                  <% @review = @game.reviews.where(user_id: current_user.id).first %>
-                <% else %>
-                  <% @review = Review.new %>
-                  <% @review.game_id = @game.id %>
+                <% if user_signed_in? %>
+                    <% if @game.reviews.where(user_id: current_user.id).count != 0 %>
+                        <% @review = @game.reviews.where(user_id: current_user.id).first %>
+                    <% else %>
+                        <% @review = Review.new %>
+                        <% @review.game_id = @game.id %>
+                    <% end %>
+                <%=hidden_field(:game, :id)%>
+                <div class="star-rating">
+                    <span class="fa fa-star-o" data-rating="1"></span>
+                    <span class="fa fa-star-o" data-rating="2"></span>
+                    <span class="fa fa-star-o" data-rating="3"></span>
+                    <span class="fa fa-star-o" data-rating="4"></span>
+                    <span class="fa fa-star-o" data-rating="5"></span>
+                    <input type="hidden" name="whatever1" class="rating-value" value=<%=@review.rating%>>
+                </div>
                 <% end %>
-
-                <%= render 'reviews/rating_form' %>
-              <% end %>
             </section>
 
             <div class="create_review_button">
