--- a/app/views/game/detail.html.erb
+++ b/app/views/game/detail.html.erb
@@ -122,33 +122,51 @@
                   </div>
 
                 </div>
-                <p>
-                  <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                    Read more
-                  </button>
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-12">
-          <div class="col-md-4 star-review">
-            <section class="micropost_form">
-                <% if user_signed_in? %>
-                    <% if @game.reviews.where(user_id: current_user.id).count != 0 %>
-                        <% @review = @game.reviews.where(user_id: current_user.id).first %>
-                    <% else %>
-                        <% @review = Review.new %>
-                        <% @review.game_id = @game.id %>
-                    <% end %>
-                <%=hidden_field(:game, :id)%>
-                <div class="star-rating">
-                    <span class="fa fa-star-o" data-rating="1"></span>
-                    <span class="fa fa-star-o" data-rating="2"></span>
-                    <span class="fa fa-star-o" data-rating="3"></span>
-                    <span class="fa fa-star-o" data-rating="4"></span>
-                    <span class="fa fa-star-o" data-rating="5"></span>
-                    <input type="hidden" name="whatever1" class="rating-value" value=<%=@review.rating%>>
+                <div class="col-md-12">
+                    <div class="col-md-4 star-review">
+                        <section class="micropost_form">
+                            <% if user_signed_in? %>
+                                <% if @game.reviews.where(user_id: current_user.id).count != 0 %>
+                                    <% @review = @game.reviews.where(user_id: current_user.id).first %>
+                                <% else %>
+                                    <% @review = Review.new %>
+                                    <% @review.game_id = @game.id %>
+                                <% end %>
+                                <%=hidden_field(:game, :id)%>
+                                <div class="star-rating">
+                                    <span class="fa fa-star-o" data-rating="1"></span>
+                                    <span class="fa fa-star-o" data-rating="2"></span>
+                                    <span class="fa fa-star-o" data-rating="3"></span>
+                                    <span class="fa fa-star-o" data-rating="4"></span>
+                                    <span class="fa fa-star-o" data-rating="5"></span>
+                                    <input type="hidden" name="whatever1" class="rating-value" value=<%=@review.rating%>>
+                                </div>
+                            <% end %>
+                        </section>
+                        <div class="create_review_button">
+                            <% if user_signed_in? and @game.reviews.where(user_id: current_user.id).count != 0 %>
+                            <%= link_to edit_review_path(id: @game.reviews.where(user_id: current_user.id).first.id) do %>
+                            <button type="button" class="btn btn-danger">Edit your Review</button>
+                            <% end %>
+                            <% else %>
+                            <%= link_to new_review_path(game_id: @game.id) do %>
+                            <button type="button" class="btn btn-danger">Create New Review</button>
+                            <% end %>
+                            <% end %>
+                        </div>
+                    </div>
+                    <div class="col-md-8">
+                        <h2>GET GAME</h2>
+                        <div class="col-md-4 url_link_game">
+                            <a href="#">URL A</a>
+                        </div>
+                        <div class="col-md-4 url_link_game">
+                            <a href="#">URL B</a>
+                        </div>
+                        <div class="col-md-4 url_link_game">
+                            <a href="#">URL C</a>
+                        </div>
+                    </div>
                 </div>
                 <% end %>
             </section>
