--- a/app/assets/stylesheets/game_rate.scss
+++ b/app/assets/stylesheets/game_rate.scss
@@ -3,4 +3,30 @@
   font-size:1.6em;
 }
 
-.star-rating .fa-star{color: yellow;}
+.star-rating .fa-star{color: #F9A825;}
+
+.stars-outer {
+  display: inline-block;
+  position: relative;
+  font-family: FontAwesome;
+}
+
+.stars-outer::before {
+  content: "\f006 \f006 \f006 \f006 \f006";
+  font-size: 23px;
+}
+
+.stars-inner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  white-space: nowrap;
+  overflow: hidden;
+  width: 0;
+}
+
+.stars-inner::before {
+  content: "\f005 \f005 \f005 \f005 \f005";
+  color: #F9A825;
+  font-size: 23px;
+}
