--- a/app/views/game/detail.html.erb
+++ b/app/views/game/detail.html.erb
@@ -1,4 +1,14 @@
 <%= render 'page_title', title: 'Game detail' %>
+<head>
+<style>
+ <% if @game.reviews.average(:rating) != nil %>
+ .stars-inner {
+  width: <%= @game.reviews.average(:rating).round(1)*20 %>%;
+}
+<%end%>
+
+</style>
+</head>
 <div id="about">
     <div class="container">
         <div class="row">
@@ -10,12 +20,10 @@
                     <div class="col-xs-12 col-md-7">
                         <div class="about-text">
                             <h2><%= @game.name %></h2>
-                            <div class="header_shousai_game">
-                                <i class="fa fa-lg fa-star" aria-hidden="true"></i>
-                                <i class="fa fa-lg fa-star" aria-hidden="true"></i>
-                                <i class="fa fa-lg fa-star" aria-hidden="true"></i>
-                                <i class="fa fa-lg fa-star" aria-hidden="true"></i>
-                                <i class="fa fa-lg fa-star-half-o" aria-hidden="true"></i>
+                            
+                            
+                            <div class="header_shousai_game_star stars-outer">
+                              <div class="stars-inner"></div>
                             </div>
                             <div class="header_shousai_game">
                                 <% if @game.reviews.average(:rating) != nil %>
