fix crash page game detail when not login

--- a/app/views/game/detail.html.erb
+++ b/app/views/game/detail.html.erb
@@ -296,24 +296,27 @@
         </button>
       </div>
       <div class="modal-body">
-        <%= form_for @review do |f| %>
-            <div class="form-group">
-            <label for="title">Title</label>
-                <!-- <input type="text" class="form-control" id="title"> -->
-                <%= f.text_field :title, placeholder:"Title", class:"form-control"%>
-            </div>
-            <div class="form-group">
-                <label for="rate">Reating</label>
-                <%= f.number_field :rating, min: 1, max: 5, placeholder:"Rating", class:"form-control"%>
-            </div>
-            <%= hidden_field_tag :game_id, params[:game_id] %>
-            <div class="form-group">
-                <!-- <label for="content">Contents</label> -->
-                <!-- <textarea class="form-control" rows="5" id="comment"></textarea> -->
-                <%= f.cktext_area :content, class:"form-control"%>
-            </div>
-            <%= f.submit "Create", class:"btn btn-primary"%>
-        <% end %>
+        <% if user_signed_in? %>
+            <%= form_for @review do |f| %>
+                <div class="form-group">
+                <label for="title">Title</label>
+                    <!-- <input type="text" class="form-control" id="title"> -->
+                    <%= f.text_field :title, placeholder:"Title", class:"form-control"%>
+                </div>
+                <div class="form-group">
+                    <label for="rate">Reating</label>
+                    <%= f.number_field :rating, min: 1, max: 5, placeholder:"Rating", class:"form-control"%>
+                </div>
+                <%= hidden_field_tag :game_id, params[:game_id] %>
+                <div class="form-group">
+                    <!-- <label for="content">Contents</label> -->
+                    <!-- <textarea class="form-control" rows="5" id="comment"></textarea> -->
+                    <%= f.cktext_area :content, class:"form-control"%>
+                </div>
+                <%= f.submit "Create", class:"btn btn-primary"%>
+            <% end %>
+        <%end%>
+        
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
