--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -1,4 +1,4 @@
-<%= render 'page_title', title: 'Game detail' %>
+<%= render 'page_title', title: @review.title %>
 <head>
   <style>
     <% if @review.rating != nil %>
@@ -16,7 +16,9 @@
       <div class="col-md-9">
         <div class="col-md-12">
           <div class="col-xs-12 col-md-5">
+            <%= link_to game_detail_path(id: @review.game_id) do %>
             <%= image_tag(@game.photos.first.image, :class => "img-responsive") %>
+            <% end %>
           </div>
           <div class="col-xs-12 col-md-7">
             <div class="about-text">
@@ -30,31 +32,35 @@
                 <% if @review.rating != nil %>
                   <p><%= @review.rating.round(1) %> Point</p>
                 <% end %>
-              </div>
+                
+              </div class= "name-user col-md-3">
+              <hr>
+                  <p>created by <%= @review.user.full_name%> at <%= @review.created_at.to_date%></p>
+              <hr>
+              <% if @review.likes.where(user_id: current_user.id).count == 0 %>
+                <%= link_to likes_path(likeable_type: "Review", likeable_id: @review.id), method: :post do %>
+                  <p> Like <%= @review.likes.count %></p>
+                <% end %>
+              <% else %>
+              <%= link_to like_path(likeable_type: "Review", likeable_id: @review.id), method: :delete do %>
+                  <p> Liked <%= @review.likes.count %></p>
+                <% end %>
+              <% end %>
+             
               <hr>
               <div>
-                <p><%= @review.content %></p>
+                <p><%= raw @review.content %></p>
               </div>
             </div>
           </div>
         </div>
         <div class="col-md-12">
           <div class="col-md-4 star-review">
-            <% if user_signed_in? %>
-              <% if @game.reviews.where(user_id: current_user.id).count != 0 %>
-                <% @review = @game.reviews.where(user_id: current_user.id).first %>
-              <% else %>
-                <% @review = Review.new %>
-                <% @review.game_id = @game.id %>
-              <% end %>
-              <%= hidden_field(:game, :id) %>
-            <% end %>
-
             <div class="create_review_button">
               <% if user_signed_in? and @review.user_id == current_user.id %>
-                <%= link_to edit_review_path(id: @game.reviews.where(user_id: current_user.id).first.id) do %>
-                  <button type="button" class="btn btn-danger">Edit your Review</button>
-                <% end %>
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#basicExampleModal">
+                  Edit your Review
+                <button>
               <% end %>
             </div>
           </div>
@@ -81,9 +87,15 @@
                     <p><%= comment.content %></p>
                     <div>
                       <strong><%= comment.likes.count %> Likes </strong>
-                      <a href="#">
-                        <i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
-                      </a>
+                      <% if comment.likes.where(user_id: current_user.id).count == 0 %>
+                        <%= link_to likes_path(likeable_type: "Comment", likeable_id: comment.id), method: :post do %>
+                          <i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
+                        <% end %>
+                      <% else %>
+                        <%= link_to like_path(comment.id, likeable_type: "Comment", likeable_id: comment.id), method: :delete do %>
+                          <b class="fa fa-thumbs-o-up" aria-hidden="true"></b>
+                        <% end %>
+                      <% end %>
                       <%# if current_user == comment.user %>
 <!--                        <strong><%#= link_to edit_review_path(id: comment.review_id) do %> Edit-->
 <!--                          <%# end %>|-->
@@ -216,6 +228,47 @@
               <!-- <label for="content">Contents</label> -->
               <!-- <textarea class="form-control" rows="5" id="comment"></textarea> -->
               <%= f.cktext_area :content, class: "form-control" %>
+            </div>
+            <%= f.submit "Create", class: "btn btn-primary" %>
+          <% end %>
+        <% end %>
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="basicExampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog create_review_modal" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel"><strong>Create Review</strong></h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <% if user_signed_in? %>
+          <%= form_for @review do |f| %>
+            <div class="form-group">
+              <label for="title">Title</label>
+              <!-- <input type="text" class="form-control" id="title"> -->
+              <%= f.text_field :title, placeholder: @review.title, class: "form-control",required: "required"%>
+            </div>
+            <div class="form-group">
+              <label for="rate">Reating</label>
+              <%= f.number_field :rating, min: 1, max: 5, placeholder: @review.rating, class: "form-control" %>
+            </div>
+            <%= hidden_field_tag :game_id, @game.id %>
+            <div class="form-group">
+              <!-- <label for="content">Contents</label> -->
+              <!-- <textarea class="form-control" rows="5" id="comment"></textarea> -->
+              <%= f.cktext_area :content, placeholder: @review.content, class: "form-control", required: "required" %>
             </div>
             <%= f.submit "Create", class: "btn btn-primary" %>
           <% end %>
