--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -15,16 +15,14 @@
     <div class="row">
       <div class="col-md-9">
         <div class="col-md-12">
-          <div class="col-xs-12 col-md-5">
+          <div class="col-xs-12 col-md-4">
             <%= link_to game_detail_path(id: @review.game_id) do %>
             <%= image_tag(@game.photos.first.image, :class => "img-responsive") %>
             <% end %>
           </div>
-          <div class="col-xs-12 col-md-7">
+          <div class="col-xs-12 col-md-8">
             <div class="about-text">
               <h2><%= @review.title %></h2>
-
-
               <div class="header_shousai_game_star stars-outer">
                 <div class="stars-inner"></div>
               </div>
@@ -32,22 +30,27 @@
                 <% if @review.rating != nil %>
                   <p><%= @review.rating.round(1) %> Point</p>
                 <% end %>
-                
               </div class= "name-user col-md-3">
               <hr>
                   <p>created by <%= @review.user.full_name%> at <%= @review.created_at.to_date%></p>
               <hr>
-              <% if user_signed_in? and @review.likes.where(user_id: current_user.id).count != 0 %>
-                <%= link_to like_path(likeable_type: "Review", likeable_id: @review.id), method: :delete do %>
-                  <p> Liked <%= @review.likes.count %></p>
+                <% if user_signed_in? and @review.likes.where(user_id: current_user.id).count != 0 %>
+                <span><%= @review.likes.count %></span>
+                <span>
+                  <%= link_to like_path(likeable_type: "Review", likeable_id: @review.id), method: :delete do %>
+                <strong><i class="fa fa-thumbs-o-up fa-2x" aria-hidden="true"></i>
+                </strong>
+                </span>
                 <% end %>
               <% else %>
-              
+                <span>
+                <span><%= @review.likes.count %></span>
                 <%= link_to likes_path(likeable_type: "Review", likeable_id: @review.id), method: :post do %>
-                  <p> Like <%= @review.likes.count %></p>
+                <strong><i class="fa fa-thumbs-o-up fa-2x" aria-hidden="true"></i>
+                </strong>
+                </span>
                 <% end %>
               <% end %>
-             
               <hr>
               <div>
                 <p><%= raw @review.content %></p>
